# SpinalCode_VLC

./: .gitignore  LICENSE  README.md
Rasp/: Decoder.py  Encoder.py  Hash.py  LED.py  PD.py  README.md  RNG.py  SymbolMapper.py  test.py
SpinalCode_C/: CMakeLists.txt
SpinalCode_C/include/: constant.h
SpinalCode_C/include/RNG/: RNG.h
SpinalCode_C/include/decoder/: decoder.h
SpinalCode_C/include/encoder/: encoder.h
SpinalCode_C/include/jenkins_hash/: Lookup3Hash.h
SpinalCode_C/src/RNG/: RNG.c
SpinalCode_C/src/decoder/: decoder.c
SpinalCode_C/src/encoder/: encoder.c
SpinalCode_C/src/include/decoder/: decoder.h
SpinalCode_C/src/include/jenkins_hash/: spooky-c.h
SpinalCode_C/src/include/multinodetree/: multinodetree.h
SpinalCode_C/src/include/vector/: vector.h
SpinalCode_C/src/init/: main.c
SpinalCode_C/src/jenkins_hash/: Lookup3Hash.c  map.c  spooky-c.c
SpinalCode_C/src/multinodetree/: multinodetree.c
SpinalCode_python/: Decoder.py  Encoder.py  Hash.py  Lookup3Hash.py  RNG.py  SymbolMapper.py  k1.txt  k2.txt  k3.txt  k4.txt  k5.txt  k6.txt  main.py
src/decoder/: decoder.c
src/encoder/: encoder.c
src/include/decoder/: decoder.h
src/include/encoder/: encoder.h
src/include/jenkins_hash/: map.h
src/include/multinodetree/: multinodetree.h
src/init/: main.c
src/multinodetree/: multinodetree.c
src/vector/: vector.c
